src/objects/adnblng__GatewayStatusMapping__mdt.object
<CustomObject>
    <fields>
        <fullName>adnblng__GatewayStatus__c</fullName>
        <inlineHelpText>Corresponding Gateway Status</inlineHelpText>
        <label>Corresponding Gateway Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                    <default>true</default>
                    <label>Success</label>
                </value>
                <value>
                    <fullName>Decline</fullName>
                </value>
                <value>
                    <fullName>ValidationError</fullName>
                    <label>Validation Error</label>
                </value>
                <value>
                    <fullName>PermanentFail</fullName>
                    <label>Permanent Fail</label>
                </value>
                <value>
                    <fullName>RequiresReview</fullName>
                    <label>Requires Review</label>
                </value>
                <value>
                    <fullName>Indeterminate</fullName>
                </value>
                <value>
                    <fullName>SystemError</fullName>
                    <label>System Error</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>adnblng__ResponseCode2__c</fullName>
        <label>Additional Gateway Response</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adnblng__ResponseCode__c</fullName>
        <label>Response from Gateway</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Gateway Status Mapping</label>
    <pluralLabel>Gateway Status Mappings</pluralLabel>
</CustomObject>